# Fastapi_Auth

./: .gitignore  docker-compose.yml  pyproject.toml
secrets/: secrets.ini
src/authentication/: bootstrap.py  config.py  views.py
src/authentication/adapters/: orm.py  repository.py
src/authentication/domain/: commands.py  events.py  model.py
src/authentication/entrypoints/: fastapi_app.py
src/authentication/service_layer/: exceptions.py  handlers.py  messagebus.py  unit_of_work.py
